; ModuleID = '/home/carl/AnghaBench/postgres/src/interfaces/ecpg/pgtypeslib/extr_datetime.c_PGTYPESdate_today.c'
source_filename = "/home/carl/AnghaBench/postgres/src/interfaces/ecpg/pgtypeslib/extr_datetime.c_PGTYPESdate_today.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tm = type { i32, i32, i32 }

@errno = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @PGTYPESdate_today(i64* %0) #0 {
  %2 = alloca i64*, align 8
  %3 = alloca %struct.tm, align 4
  store i64* %0, i64** %2, align 8
  %4 = call i32 @GetCurrentDateTime(%struct.tm* %3)
  %5 = load i64, i64* @errno, align 8
  %6 = icmp eq i64 %5, 0
  br i1 %6, label %7, label %18

7:                                                ; preds = %1
  %8 = getelementptr inbounds %struct.tm, %struct.tm* %3, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = getelementptr inbounds %struct.tm, %struct.tm* %3, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = getelementptr inbounds %struct.tm, %struct.tm* %3, i32 0, i32 2
  %13 = load i32, i32* %12, align 4
  %14 = call i64 @date2j(i32 %9, i32 %11, i32 %13)
  %15 = call i64 @date2j(i32 2000, i32 1, i32 1)
  %16 = sub nsw i64 %14, %15
  %17 = load i64*, i64** %2, align 8
  store i64 %16, i64* %17, align 8
  br label %18

18:                                               ; preds = %7, %1
  ret void
}

declare dso_local i32 @GetCurrentDateTime(%struct.tm*) #1

declare dso_local i64 @date2j(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
